fix: file uploader css

--- a/client/styles/_publisher.scss
+++ b/client/styles/_publisher.scss
@@ -4,6 +4,7 @@
 
 @import '~mixins.scss';
 @import '~variables.scss';
+@import 'uploadFix.scss';
 @import 'treeList.scss';
 @import 'listElement.scss';
 @import 'helperElements.scss';
