update: Drag articles here is needs to be relocated in manual content lists

--- a/client/styles/dragNdrop.scss
+++ b/client/styles/dragNdrop.scss
@@ -26,7 +26,7 @@ ul[dnd-list] {
     &__heading {
         display: inline-block;
         position: absolute;
-        top: 50%;
+        top: 2.6rem;
         left: 50%;
         transform: translateY(-50%);
         transform: translateX(-50%);
