fix: new rule tenant list invisible when long

--- a/client/views/settings/rules/rule-add-organization.html
+++ b/client/views/settings/rules/rule-add-organization.html
@@ -83,15 +83,13 @@
 				</div>
 			</div>
 			<div class="sd-list-item__action-menu">
-			<button class="dropdown__toggle" ng-click="webPublisherSettings.removeRuleDestination($index)">
+			<button ng-click="webPublisherSettings.removeRuleDestination($index)">
 				<i class="icon-trash"></i>
 			</button>
 			</div>
 		</div>
-
-
 		<div class="form__row">
-			<div class="dropdown" dropdown="">
+			<div class="dropdown" dropdown="" dropdown-append-to-body="">
 				<button class="dropdown__toggle btn btn--primary btn--icon-only-circle" dropdown__toggle="">
 					<i class="icon-plus-large"></i>
 				</button>
