--- a/client/styles/_publisher.scss
+++ b/client/styles/_publisher.scss
@@ -13,3 +13,7 @@
 @import 'wizardThemeBox.scss';
 @import 'wizardThemeDetails.scss';
 @import 'iconOnHover.scss';
+
+.sd-list-item-group li + li .sd-list-item {
+    border-top: 1px solid rgba(123, 123, 123, 0.2);
+}
