--- a/client/views/content-lists/content-list-manual.html
+++ b/client/views/content-lists/content-list-manual.html
@@ -48,6 +48,16 @@
                                 <i class="icon-warning-sign"></i>
                             </a>
                         </div>
+                        <div ng-if="!article.duplicate && article.content && article.content.featureMedia && article.content.featureMedia.image"
+                            class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
+                            <img src="{{article.content.tenant.subdomain ? 'http://' + article.content.tenant.subdomain + '.' + article.content.tenant.domainName + article.content.featureMedia._links.download.href : 'http://' + article.content.tenant.domainName + article.content.featureMedia._links.download.href}}"
+                                class="sd-list-item__thumbnail" style="max-width:60px">
+                        </div>
+                        <div ng-if="!article.duplicate && article.featureMedia && article.featureMedia.image"
+                            class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
+                            <img src="{{article.tenant.subdomain ? 'http://' + article.tenant.subdomain + '.' + article.tenant.domainName + article.featureMedia._links.download.href : 'http://' + article.tenant.domainName + article.featureMedia._links.download.href}}"
+                                class="sd-list-item__thumbnail" style="max-width:60px">
+                        </div>
                         <div class="sd-list-item__column sd-list-item__column--grow">
                             <div class="sd-list-item__row">
                                 <span class="sd-overflow-ellipsis sd-list-item__text-strong">
@@ -102,6 +112,16 @@
                             <a class="btn btn--alert btn--small btn--icon-only btn--hollow">
                                 <i class="icon-warning-sign"></i>
                             </a>
+                        </div>
+                        <div ng-if="!article.duplicate && article.content && article.content.featureMedia && article.content.featureMedia.image"
+                            class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
+                            <img src="{{article.content.tenant.subdomain ? 'http://' + article.content.tenant.subdomain + '.' + article.content.tenant.domainName + article.content.featureMedia._links.download.href : 'http://' + article.content.tenant.domainName + article.content.featureMedia._links.download.href}}"
+                                class="sd-list-item__thumbnail" style="max-width:60px">
+                        </div>
+                        <div ng-if="!article.duplicate && article.featureMedia && article.featureMedia.image"
+                            class="sd-list-item__column sd-list-item__column--no-border sd-list-item__column--no-right-padding">
+                            <img src="{{article.tenant.subdomain ? 'http://' + article.tenant.subdomain + '.' + article.tenant.domainName + article.featureMedia._links.download.href : 'http://' + article.tenant.domainName + article.featureMedia._links.download.href}}"
+                                class="sd-list-item__thumbnail" style="max-width:60px">
                         </div>
                         <div class="sd-list-item__column sd-list-item__column--grow">
                             <div class="sd-list-item__row">
