--- a/client/views/dashboard/tenant.html
+++ b/client/views/dashboard/tenant.html
@@ -1,6 +1,6 @@
 <div class="sd-grid-item-header">
     <h3 class="sd-grid-item-header__heading sd-overflow-ellipsis">
-        <a ng-href="{{site.outputChannel ? site.outputChannel.config.url : site.subdomain ? 'http://' + site.subdomain + '.' + site.domainName: 'http://' + site.domainName}}" flow="down">
+        <a target="_blank" ng-href="{{site.outputChannel ? site.outputChannel.config.url : site.subdomain ? 'http://' + site.subdomain + '.' + site.domainName: 'http://' + site.domainName}}" flow="down">
             <span>{{ site.name }}</span><i class="icon-external"></i>
         </a>
     </h3>
