--- a/client/views/output/index.html
+++ b/client/views/output/index.html
@@ -19,11 +19,18 @@
                 <div sd-search-handler data-title="Search" ng-model='webPublisherOutput.advancedFilters.term'></div>
                 <h3 class="subnav__page-title">Output Control</h3>
             </div>
-            <div class="subnav subnav--padded subnav--lower-z-index" ng-init="listType = 'incoming'">
-                <sd-check ng-model="listType" type="radio" ng-value="incoming" label-position="inside"
-                    ng-disabled="webPublisherOutput.loadingArticles">Incoming content</sd-check>
-                <sd-check ng-model="listType" type="radio" ng-value="published" label-position="inside"
-                    ng-disabled="webPublisherOutput.loadingArticles">Published</sd-check>
+            <div class="subnav subnav--lower-z-index">
+                <div class="subnav__stretch-bar" ng-init="listType = 'incoming'">
+                    <sd-check ng-model="listType" type="radio" ng-value="incoming" label-position="inside"
+                        ng-disabled="webPublisherOutput.loadingArticles">Incoming content</sd-check>
+                    <sd-check ng-model="listType" type="radio" ng-value="published" label-position="inside"
+                        ng-disabled="webPublisherOutput.loadingArticles">Published</sd-check>
+                </div>
+                <div class="subnav__spacer subnav__spacer--no-margin"></div>
+                <div class="subnav__content-bar">
+                    <span>Incoming:</span> <span class="badge" style="margin: 0 10px 0 6px;">{{webPublisherOutput.articlesCount.incoming}}</span>
+                    <span>Published:</span> <span class="badge" style="margin: 0 10px 0 6px;">{{webPublisherOutput.articlesCount.published}}</span>
+                </div>
             </div>
             <div class="sd-loader" ng-if="webPublisherOutput.loading"></div>
             <div class="sd-column-box--3">
