fix: route is blocked when editing menu item

--- a/client/views/settings/website-management/manage-navigation-menu.html
+++ b/client/views/settings/website-management/manage-navigation-menu.html
@@ -48,7 +48,8 @@
                                     <select id="menuRoute" class="dropdown__toggle line-input" ng-model="newMenu.route"
                                         ng-options="route.id as route.name for route in routes"
                                         ng-required="!(newMenu.uri.length || newMenu.route)"
-                                        ng-disabled="newMenu.uri.length">
+                                        ng-change="webPublisherSettings.navigationMenuSetUri()"
+                                    >
                                         <option value=""></option>
                                     </select>
                                 </div>
