webhooks article[preview] event added to UI

--- a/client/views/settings/webhooks/webhook-add.html
+++ b/client/views/settings/webhooks/webhook-add.html
@@ -17,6 +17,7 @@
 						'article[published]',
 						'article[unpublished]',
 						'article[canceled]',
+						'article[preview]',
 						'menu[created]',
 						'menu[updated]',
 						'menu[deleted]',
