fix: UI tooltips

--- a/client/views/output/preview-pane.html
+++ b/client/views/output/preview-pane.html
@@ -14,8 +14,8 @@
                     <time ng-if="!webPublisherOutput.selectedArticle.updatedAt" title="{{webPublisherOutput.selectedArticle.createdAt}}">{{webPublisherOutput.selectedArticle.createdAt | reldate}}</time>
                 </p>
                 <span class="btn-icon-group">
-                    <button class="icn-btn" ng-click="webPublisherOutput.correctArticle(webPublisherOutput.selectedArticle); $event.stopPropagation();"><i class="icon-pencil"></i></button>
-                    <button class="icn-btn" ng-click="webPublisherOutput.openPublish(webPublisherOutput.selectedArticle, 'publish'); $event.stopPropagation();"><i class="icon-expand-thin"></i></button>
+                    <button sd-tooltip="Correct" flow="down" class="icn-btn" ng-click="webPublisherOutput.correctArticle(webPublisherOutput.selectedArticle); $event.stopPropagation();"><i class="icon-pencil"></i></button>
+                    <button sd-tooltip="Publish" flow="down" class="icn-btn" ng-click="webPublisherOutput.openPublish(webPublisherOutput.selectedArticle, 'publish'); $event.stopPropagation();"><i class="icon-expand-thin"></i></button>
                 </span>
             </div>
             <div class="side-panel-collapsible-header__collapsible">
