--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -216,3 +216,13 @@ option:disabled, select[disabled] > option{
 .flexGrow{
     flex-grow: 1;
 }
+
+.sp-manage-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.85);
+    z-index: 1000;
+}
