--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -195,6 +195,9 @@
 .overflow-auto {
     overflow: auto;
 }
+.overflow-initial {
+    overflow: initial;
+}
 
 .fadeElement {
     animation-name: fadeOpacity;
