--- a/client/views/content-lists/list-box.html
+++ b/client/views/content-lists/list-box.html
@@ -1,4 +1,4 @@
-<div class="sd-card">
+<div class="sd-card flexGrow">
     <div class="sd-card__header sd-card__header--padding" ng-class="{'sd-card__header--secondary-color': list.type === 'automatic'}">
         <div class="sd-card__heading"
             ng-if="!webPublisherContentLists._editMode(list, webPublisherContentLists.selectedList, webPublisherContentLists.listAdd)"
