--- a/client/views/content-lists/content-list-manual.html
+++ b/client/views/content-lists/content-list-manual.html
@@ -42,7 +42,7 @@
                     dnd-type="article.type"
                     dnd-effect-allowed="move"
                 >
-                    <div class="sd-list-item">
+                    <div class="sd-list-item draggable">
                         <div class="sd-list-item__column" ng-if="article.duplicate">
                             <a class="btn btn--alert btn--small btn--icon-only btn--hollow">
                                 <i class="icon-warning-sign"></i>
@@ -107,7 +107,7 @@
                     dnd-type="article.type"
                     dnd-effect-allowed="move"
                 >
-                    <div class="sd-list-item">
+                    <div class="sd-list-item draggable">
                         <div class="sd-list-item__column" ng-if="article.duplicate">
                             <a class="btn btn--alert btn--small btn--icon-only btn--hollow">
                                 <i class="icon-warning-sign"></i>
