feature: article preview in content lists

--- a/client/views/content-lists/content-list-automatic.html
+++ b/client/views/content-lists/content-list-automatic.html
@@ -126,7 +126,7 @@
         </div>
         <div class="sd-column-box__main-column relative">
             <div class="sd-list-item-group sd-shadow--z2">
-                <div sd-list-articles data-list="newList" data-type="detail"></div>
+                <div sd-list-articles data-list="newList" data-type="detail" controller="webPublisherContentLists"></div>
             </div>
         </div>
     </div>
