feature: manual lists counter

--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -241,3 +241,7 @@ option:disabled, select[disabled] > option{
     cursor: move;
 }
 
+.sp-listSerialNumberMinWidth {
+    min-width: 1.2em;
+    text-align: center;
+}
